Minor bug fixes
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@195897 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/vignettes/browser_ly_testing.Rmd
+++ b/trunk/vignettes/browser_ly_testing.Rmd
@@ -33,7 +33,8 @@ tx_data <- load_tx_data(TxDb.Mmusculus.BioMart.igis)
 ```
 
 ```{r}
-range.gene = GenomicRanges::GRanges("3",IRanges(6000, 10000))
+view_range <- get_view_range(chr = 1, start=159758000, end=159758000)
+view_range <- extend_grange(view_range, 50000)
 # Get the coverage
 input <- fi[2, 'Sample.Control']
 input_idx <- which(fi$Sample.Name==input)
@@ -44,11 +45,11 @@ shortened_names <- c(fi[idx[1:length(idx)-1], "Genotype"], "Input")
 sf <- get_scaling_factor(fi[idx,])/1000000
 sf <- sf[2,]
 
-cvg <- get_coverage_in_range(fi[idx, "File.bw"], range.gene, shortened_names, sf)
+cvg <- get_coverage_in_range(fi[idx, "File.bw"], view_range, shortened_names, sf)
 ```
 
 
 ```{r Demo}
-make_tracks(TxDb.Mmusculus.BioMart.igis, range.gene, tx_data, cvg)
+make_tracks(TxDb.Mmusculus.BioMart.igis, view_range, tx_data, cvg)
 ```
 
