--- a/trunk/vignettes/Carrol_Example_Vignette.Rmd
+++ b/trunk/vignettes/Carrol_Example_Vignette.Rmd
@@ -94,7 +94,7 @@ rna_hm <- rna_heatmap(T47D_exprs[high_var,], col_groups = treat_groups,
             x = pData(T47D_eset)$title, y = tss_ranges$symbol[high_var],
             y_title = NULL, x_title = NULL) 
 
-rna_hm %>% plot_iHeatmap() %>% layout(margin = list(b = 250)) %>% export(file = "/gne/research/workspace/schepa/Carroll_Data/Figures/rna_hm.pdf")
+# rna_hm %>% plot_iHeatmap() %>% layout(margin = list(b = 250)) %>% export(file = "/gne/research/workspace/schepa/Carroll_Data/Figures/rna_hm.pdf")
 
 ```
 
@@ -134,12 +134,12 @@ T47D = list(
 tss <- gChipseq::tssFromTxdb(txdb = TxDb.Hsapiens.BioMart.igis)
 #unique_tss <- unique(tss) #Remove same positions
 
-#peaks <- lapply( fi$File.macs[unlist(MCF7)], readMacsPeaks, fc=5, minTags=10, fdr=0.01)
-#peaks <- peaks[!sapply(peaks, is.null)]
+peaks <- lapply( fi$File.macs[unlist(T47D)], readMacsPeaks, fc=5, minTags=10, fdr=0.01)
+peaks <- peaks[!sapply(peaks, is.null)]
 
-#merged_peaks <- reduce(do.call(c, peaks))
+merged_peaks <- reduce(do.call(c, peaks))
 
-#tss_in_peaks <- subsetByOverlaps(tss_ranges, merged_peaks, maxgap = 0)
+tss_in_peaks <- subsetByOverlaps(tss_ranges, merged_peaks, maxgap = 0)
 
 tss_cvg_mats <- lapply(T47D, function(x){
   tmp <- make_coverage_matrix(inputs = fi$File.bam[x],
@@ -162,13 +162,13 @@ new_single_coverage_heatmap(tss_cvg_mats[[1]], row_order = "signal", y = tss_ran
 ```{r}
 T47D_ER_tss_cvg_mats = tss_cvg_mats[1:3]
 names(T47D_ER_tss_cvg_mats) = c("Control","Pr","Syn. Pr")
-multi_coverage_heatmap(MCF7_ER_tss_cvg_mats, row_order = "kmeans", y = tss_in_peaks$names, k = 3)
+multi_coverage_heatmap(T47D_ER_tss_cvg_mats, row_order = "kmeans", y = tss_in_peaks$symbol, k = 3)
 ```
 
 ```{r}
 MCF7_PR_tss_cvg_mats = tss_cvg_mats[4:6]
 names(MCF7_PR_tss_cvg_mats) = c("Control","Pr","Syn. Pr")
-multi_coverage_heatmap(MCF7_PR_tss_cvg_mats, row_order = "kmeans", y = tss_in_peaks$names, k = 3)
+multi_coverage_heatmap(MCF7_PR_tss_cvg_mats, row_order = "kmeans", y = tss_in_peaks$symbol, k = 3)
 ```
 
 
@@ -200,13 +200,13 @@ T47D_scale_factors = sapply(T47D, function(x) mean(sf[x]))
 ```
 
 ```{r}
-ag1 = aggregate_profile_plot(er_progesterone_peaks_cvg_mats[1:3],xlab = "Position relative to ER Peaks<br> in T47D + Progesterone",
+ag1 = aggregate_profile_plot(er_progesterone_peaks_cvg_mats[1:3],xlab = "",
                             ylab = "ER ChIP-Signal")
 ag2 = aggregate_profile_plot(er_progesterone_peaks_cvg_mats[4:6],xlab = "Position relative to ER Peaks<br> in T47D + Progesterone",
                             ylab = "PR ChIP-Signal")
 
-ag1 %>% export(file = "/gne/research/workspace/schepa/Carroll_Data/Figures/aggregate_profiles1.pdf")
-ag2 %>% export(file = "/gne/research/workspace/schepa/Carroll_Data/Figures/aggregate_profiles2.pdf")
+ag1 %>% export(file = "~/workspace//Carroll_Data/Figures/aggregate_profiles1.pdf")
+# ag2 %>% export(file = "/gne/research/workspace/schepa/Carroll_Data/Figures/aggregate_profiles2.pdf")
 
 
 ```
@@ -214,7 +214,7 @@ ag2 %>% export(file = "/gne/research/workspace/schepa/Carroll_Data/Figures/aggre
 ```{r}
 mchm <- multi_coverage_heatmap(er_progesterone_peaks_cvg_mats[1:3], row_order = "kmeans", k = 3, cluster_by = "first")
 
-mchm %>% plot_iHeatmap %>% layout(margin = list(b = 250)) %>% export(file = "/gne/research/workspace/schepa/Carroll_Data/Figures/multi_coverage.pdf")
+# mchm %>% plot_iHeatmap %>% layout(margin = list(b = 250)) %>% export(file = "/gne/research/workspace/schepa/Carroll_Data/Figures/multi_coverage.pdf")
 
 ```
 
