--- a/trunk/vignettes/Carrol_Example_Vignette.Rmd
+++ b/trunk/vignettes/Carrol_Example_Vignette.Rmd
@@ -15,75 +15,33 @@ BiocParallel::register(BiocParallel::MulticoreParam(4, progressbar = FALSE))
 ```
 
 ``` {r Load Data}
-info_dir <- "/gne/research/workspace/rinaldj1/projects/bulkChipPipeline/data/CARROLL_PR/data/"
-s_file <- paste(info_dir, "samples.txt", sep='')
-p_file <- paste(info_dir, "pairs.txt", sep='')
-fi <- chipVis::get_chip_file_info(s_file, p_file)
+
+fi <- readRDS("/gne/research/workspace/schepa/Carroll_Data/chip_file_info.Rds")
+
 org <- "human"
 genome <- "GRCh38"
 
-anno <- readr::read_csv("/gne/research/workspace/rinaldj1/projects/bulkChipPipeline/data/CARROLL_PR/datDex.csv")[,c("run","sample_attribute")]
-
-sample_attributes = lapply(strsplit(anno$sample_attribute, split = "||", fixed = TRUE),
-                           function(x) setNames(lapply(x, function(y) stringr::str_trim(strsplit(y,":")[[1]][2])),
-                                                stringr::str_trim(sapply(x, function(y) strsplit(y,":")[[1]][1]))))
-
-sample_attributes_df <- plyr::ldply(sample_attributes, data.frame, stringsAsFactors = FALSE)
-
-fi_attributes <- as.data.frame(t(sapply(fi$Sample.Name, function(x){
-  if (x %in% anno$run){
-    return(sample_attributes_df[which(anno$run == x), ])
-  } else{
-    return(sample_attributes_df[grep(x,sample_attributes_df$source_name)[1], ])
-  }
-})))
-
-fi <- cbind(fi, fi_attributes)
-
 # Get scaling factors based on library size
-sf <- chipVis::get_scaling_factor(fi)[2,]/1000000
+sf <- get_scaling_factor(fi)[2,]/1000000
 
-```
-  
-  
-```{r}
-library(Homo.sapiens)
-rpkmEset <- readRDS("/gne/research/workspace/schepa/Carroll_Data/GSE68358.rpkmEset.Rds")
+rpkmEset <- readRDS("/gne/research/workspace/schepa/Carroll_Data/GSE68358.rpkmEset.with_fdata.Rds")
 
-fd <- AnnotationDbi::select(Homo.sapiens, 
-             rownames(exprs(rpkmEset)), 
-             c("TXSTART","TXEND","TXCHROM","TXSTRAND","SYMBOL","ENSEMBL"),
-             keytype="ENTREZID")
-
-library(dplyr)
-fd2 <- fd %>% group_by(ENTREZID) %>% summarize(start = min(TXSTART),
-                                                 end = max(TXEND),
-                                                 chr = first(TXCHROM),
-                                                 strand = first(TXSTRAND),
-                                                 symbol = first(SYMBOL),
-                                                 ensembl = first(ENSEMBL))
-
-fd2 <- fd2[which(substr(fd2$chr,1,3) == "chr"),]
-fd2$chr <- sapply(fd2$chr, function(x) substr(x, 4, nchar(x)))
-fd2 <- fd2[which(fd2$chr %in% c(1:22,"X")),]
-
-rpkmEset <- rpkmEset[fd2$ENTREZID,]
-
-tss_ranges <- with(fd2, GenomicRanges::GRanges(chr,
+tss_ranges <- with(fData(rpkmEset), GenomicRanges::GRanges(chr,
                                                IRanges::IRanges(start = ifelse(strand == "-",
-                                                                              end,
-                                                                              start),
-                                                               width = 1),
+                                                                               end,
+                                                                               start),
+                                                                width = 1),
                                                strand = strand,
                                                symbol = symbol,
-                                               entrez = ENTREZID,
-                                               ensembl = ensembl))
-T47D_eset <- rpkmEset[,grep("T47D",pData(rpkmEset)$celltype)]
+                                               entrez = entrez))
+
 
 ```
   
-  
+ 
 ```{r}
+T47D_eset <- rpkmEset[,grep("T47D",pData(rpkmEset)$celltype)]
+
 T47D_exprs = log10(exprs(T47D_eset)+1)
 T47D_var = apply(T47D_exprs,1, sd, na.rm= TRUE)
 high_var = which(T47D_var > quantile(T47D_var,0.95,na.rm= TRUE))
@@ -103,47 +61,53 @@ rna_hm <- rna_heatmap(T47D_exprs[high_var,], col_groups = treat_groups,
   
 ```{r MCF7_tss_cvg}
 T47D = list(
-  T47D_ER_Full_Media_3hr  = which(fi_attributes$source_name == "T47D_ER_Full_Media_3hr"),
-  T47D_ER_Progesterone_3hr = which(fi_attributes$source_name == "T47D_ER_Progesterone_3hr"),
-  T47D_ER_R5020_3hr = which(fi_attributes$source_name == "T47D_ER_R5020_3hr"),
+  T47D_ER_Full_Media_3hr  = which(fi$source_name == "T47D_ER_Full_Media_3hr"),
+  T47D_ER_Progesterone_3hr = which(fi$source_name == "T47D_ER_Progesterone_3hr"),
+  T47D_ER_R5020_3hr = which(fi$source_name == "T47D_ER_R5020_3hr"),
   
-  T47D_PR_Full_Media_3hr  = which(fi_attributes$source_name == "T47D_PR_Full_Media_3hr"),
-  T47D_PR_Progesterone_3hr = which(fi_attributes$source_name == "T47D_PR_Progesterone_3hr"),
-  T47D_PR_R5020_3hr = which(fi_attributes$source_name == "T47D_PR_R5020_3hr"),
+  T47D_PR_Full_Media_3hr  = which(fi$source_name == "T47D_PR_Full_Media_3hr"),
+  T47D_PR_Progesterone_3hr = which(fi$source_name == "T47D_PR_Progesterone_3hr"),
+  T47D_PR_R5020_3hr = which(fi$source_name == "T47D_PR_R5020_3hr"),
   
-  T47D_p300_Full_Media_3hr  = which(fi_attributes$source_name == "T47D_p300_Full_Media_3hr"),
-  T47D_p300_Progesterone_3hr = which(fi_attributes$source_name == "T47D_p300_Progesterone_3hr"),
-  T47D_p300_R5020_3hr = which(fi_attributes$source_name == "T47D_p300_R5020_3hr")
+  T47D_p300_Full_Media_3hr  = which(fi$source_name == "T47D_p300_Full_Media_3hr"),
+  T47D_p300_Progesterone_3hr = which(fi$source_name == "T47D_p300_Progesterone_3hr"),
+  T47D_p300_R5020_3hr = which(fi$source_name == "T47D_p300_R5020_3hr")
   
 )
 
 
 # T47D = list(
-#   T47D_ER_3hr_Vehicle  = which(fi_attributes$source_name == "T47D_ER_3hr_Vehicle"),
-#   T47D_ER_3hr_E2 = which(fi_attributes$source_name == "T47D_ER_3hr_E2"),
-#   T47D_ER_3hr_PG = which(fi_attributes$source_name == "T47D_ER_3hr_PG"),
-#   T47D_ER_3hr_E2_PG = which(fi_attributes$source_name == "T47D_ER_3hr_E2+PG"),
+#   T47D_ER_3hr_Vehicle  = which(fi$source_name == "T47D_ER_3hr_Vehicle"),
+#   T47D_ER_3hr_E2 = which(fi$source_name == "T47D_ER_3hr_E2"),
+#   T47D_ER_3hr_PG = which(fi$source_name == "T47D_ER_3hr_PG"),
+#   T47D_ER_3hr_E2_PG = which(fi$source_name == "T47D_ER_3hr_E2+PG"),
 #   
-#   T47D_PR_3hr_Vehicle  = which(fi_attributes$source_name == "T47D_PR_3hr_Vehicle"),
-#   T47D_PR_3hr_E2 = which(fi_attributes$source_name == "T47D_PR_3hr_E2"),
-#   T47D_PR_3hr_PG = which(fi_attributes$source_name == "T47D_PR_3hr_PG"),
-#   T47D_PR_3hr_E2_PG = which(fi_attributes$source_name == "T47D_PR_3hr_E2+PG")
+#   T47D_PR_3hr_Vehicle  = which(fi$source_name == "T47D_PR_3hr_Vehicle"),
+#   T47D_PR_3hr_E2 = which(fi$source_name == "T47D_PR_3hr_E2"),
+#   T47D_PR_3hr_PG = which(fi$source_name == "T47D_PR_3hr_PG"),
+#   T47D_PR_3hr_E2_PG = which(fi$source_name == "T47D_PR_3hr_E2+PG")
 #   
 # )
-
-tss <- gChipseq::tssFromTxdb(txdb = TxDb.Hsapiens.BioMart.igis)
-#unique_tss <- unique(tss) #Remove same positions
-
-peaks <- lapply( fi$File.macs[unlist(T47D)], readMacsPeaks, fc=5, minTags=10, fdr=0.01)
-peaks <- peaks[!sapply(peaks, is.null)]
-
-merged_peaks <- reduce(do.call(c, peaks))
-
-tss_in_peaks <- subsetByOverlaps(tss_ranges, merged_peaks, maxgap = 0)
 
 tss_cvg_mats <- lapply(T47D, function(x){
   tmp <- make_coverage_matrix(inputs = fi$File.bam[x],
                                   ranges = tss_ranges[high_var],
+                                  binsize = 100,
+                                  up = 5000,
+                                  down = 5000)
+  out <- Reduce("+", tmp) / length(tmp)
+  return(out)
+})
+
+tr <- transcriptsBy(TxDb.Hsapiens.BioMart.igis, by = "gene") %>% unlist()
+tr$entrez <- stringr::str_extract(names(tr),"(?<=:)(.*)")
+tr$symbol <- annotate::getSYMBOL(tr$entrez, data='org.Hs.eg')
+names(tr) = NULL
+tr <- resize(tr, fix = "start", width = 1)
+
+tss_cvg_mats2 <- lapply(T47D, function(x){
+  tmp <- make_coverage_matrix(inputs = fi$File.bam[x],
+                                  ranges = tr[which(tr$entrez %in% tss_ranges$entrez[high_var])],
                                   binsize = 25,
                                   up = 1000,
                                   down = 1000)
@@ -151,12 +115,33 @@ tss_cvg_mats <- lapply(T47D, function(x){
   return(out)
 })
 
+# 
+# tss <- gChipseq::tssFromTxdb(txdb = TxDb.Hsapiens.BioMart.igis)
+# #unique_tss <- unique(tss) #Remove same positions
+# 
+# peaks <- lapply( fi$File.macs[unlist(T47D)], readMacsPeaks, fc=5, minTags=10, fdr=0.01)
+# peaks <- peaks[!sapply(peaks, is.null)]
+# 
+# merged_peaks <- reduce(do.call(c, peaks))
+# 
+# tss_in_peaks <- subsetByOverlaps(tss_ranges, merged_peaks, maxgap = 0)
+# 
+# tss_cvg_mats <- lapply(T47D, function(x){
+#   tmp <- make_coverage_matrix(inputs = fi$File.bam[x],
+#                                   ranges = tss_ranges[high_var],
+#                                   binsize = 25,
+#                                   up = 1000,
+#                                   down = 1000)
+#   out <- Reduce("+", tmp) / length(tmp)
+#   return(out)
+# })
+
 ```
 
 
 
 ```{r}
-new_single_coverage_heatmap(tss_cvg_mats[[1]], row_order = "signal", y = tss_ranges$symbol)
+new_single_coverage_heatmap(tss_cvg_mats[[1]], row_order = "signal", y = tss_ranges$symbol[high_var])
 ```
 
 ```{r}
